Update pushed to repo

--- a/time-series-forecasting-with-xgboost.ipynb
+++ b/time-series-forecasting-with-xgboost.ipynb
@@ -2221,6 +2221,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Maximum consumption is in Q2 and Q3 - May to July. Its understandable. High usage of Air conditioner\n",
+    "2. During the quarters Q2 and Q3 the consumption is very high in the evening hours.\n",
+    "3. Need more data points like weather data and holiday data to make model more accurate.\n",
+    "4. Hyper parameter tuning parameter should also be done"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2248,5 +2258,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
